--- a/formularios.html
+++ b/formularios.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <center>
+        <a href="index.html"><h1>REGRESAR</h1></a>
         <h1>FORMULARIOS</h1><hr>
     </center>
     <form action="index.php" method="post" enctype="text/plain" >
