--- a/otras.html
+++ b/otras.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+    <a href="index.html"><h1>REGRESAR</h1></a>
+
     <header>
         <h1>ETIQUETAS SEMANTICAS</h1>
     </header>
