--- a/tablas2.html
+++ b/tablas2.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="index.html"><h1>REGRESAR</h1></a>
+
 <center><h1>patron en tablas
 </h1></center>
 <body>
