--- a/tip.de.listas.html
+++ b/tip.de.listas.html
@@ -7,6 +7,8 @@
     <title>Listas</title>
 </head>
 <center>
+    <a href="index.html"><h1>REGRESAR</h1></a>
+
     <h1>Listas html</h1>
 </center>
 <body>
