--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@ border-radius: 0%;
 </style>    
 </head>
 <body bgcolor="grey">
-    <h1>CESAR OSVALDO LOPEZ BEADE</h1>
-    <h2>CESAR OSVALDO LOPEZ BEADE</h2>
-    <h3>CESAR OSVALDO LOPEZ BEADE</h3>
-    <h4>CESAR OSVALDO LOPEZ BEADE</h4>
-    <h5>CESAR OSVALDO LOPEZ BEADE</h5>
-    <h6>CESAR OSVALDO LOPEZ BEADE</h6>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/JTw5URW-fQs?si=iKDfwhXXhjJAO6_C" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <img src="https://www.bing.com/images/search?view=detailV2&ccid=NbiQZimq&id=C884CD7AA8CDA8843F6031432C154A498ABBA495&thid=OIP.NbiQZimqvAdEEcvS9dTWkgHaD5&mediaurl=https%3a%2f%2fstatic1.hotcarsimages.com%2fwordpress%2fwp-content%2fuploads%2f2020%2f12%2fFerrari-599XX-EVO-via-Reddit.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.35b8906629aabc074411cbd2f5d4d692%3frik%3dlaS7iklKFSxDMQ%26pid%3dImgRaw%26r%3d0&exph=900&expw=1710&q=ferrari&simid=607994514537870712&FORM=IRPRST&ck=AE7C3C6EF987A6A2B00E70C78D47448C&selectedIndex=46&itb=0" alt="">
-    
+    <center><h1>MENU</h1></center>
+    <center><h1>PRACTICAS 1ER SEMANA</h1></center>
+    <a href="tiposdetexto.html" target="_blank"> <h1>textos</h1></a>
+    <a href="Bibliografia.html" target="_blank"> <h1>biografia</h1></a>
+    <a href="tip.de.listas.html" target="_blank"> <h1>listas</h1></a>
+    <a href="listas.personalisada.html" target="_blank"> <h1>listas personalisadas</h1></a>
+    <a href="lineasyimagen.html" target="_blank"> <h1>linea y imagen</h1></a>   
+    <a href="wiki1.html" target="_blank"> <h1>wiki</h1></a>    
+    <a href="tablas2.html" target="_blank"> <h1>tablas patrones</h1></a>
+    <a href="formularios.html" target="_blank"> <h1>FORMULARIOS</h1></a>
+
 </body>
 </html>
