--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@ border-radius: 0%;
 <body bgcolor="grey">
     <center><h1>MENU</h1></center>
     <center><h1>PRACTICAS 1ER SEMANA</h1></center>
-    <a href="tiposdetexto.html" target="_blank"> <h1>textos</h1></a>
-    <a href="Bibliografia.html" target="_blank"> <h1>biografia</h1></a>
-    <a href="tip.de.listas.html" target="_blank"> <h1>listas</h1></a>
-    <a href="listas.personalisada.html" target="_blank"> <h1>listas personalisadas</h1></a>
-    <a href="lineasyimagen.html" target="_blank"> <h1>linea y imagen</h1></a>   
-    <a href="wiki1.html" target="_blank"> <h1>wiki</h1></a>    
-    <a href="tablas2.html" target="_blank"> <h1>tablas patrones</h1></a>
-    <a href="formularios.html" target="_blank"> <h1>FORMULARIOS</h1></a>
+    <a href="tiposdetexto.html" > <h1>textos</h1></a>
+    <a href="Bibliografia.html" > <h1>biografia</h1></a>
+    <a href="tip.de.listas.html" > <h1>listas</h1></a>
+    <a href="listas.personalisada.html" > <h1>listas personalisadas</h1></a>
+    <a href="lineasyimagen.html" > <h1>linea y imagen</h1></a>   
+    <a href="wiki1.html" > <h1>wiki</h1></a>    
+    <a href="tablas2.html" > <h1>tablas patrones</h1></a>
+    <a href="formularios.html" > <h1>FORMULARIOS</h1></a>
 
 </body>
 </html>
