--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@ border-radius: 0%;
     <a href="listas.personalisada.html" > <h1>listas personalisadas</h1></a>
     <a href="lineasyimagen.html" > <h1>linea y imagen</h1></a>   
     <a href="wiki1.html" > <h1>wiki</h1></a>    
+
+    <center><h1>PRACTICAS 2DA SEMANA</h1></center>
     <a href="tablas2.html" > <h1>tablas patrones</h1></a>
     <a href="formularios.html" > <h1>FORMULARIOS</h1></a>
-
 </body>
 </html>
