--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ border-radius: 0%;
     <a href="tiposdetexto.html" > <h1>textos</h1></a>
     <a href="Bibliografia.html" > <h1>biografia</h1></a>
     <a href="tip.de.listas.html" > <h1>listas</h1></a>
-    <a href="listas.personalisada.html" > <h1>listas personalisadas</h1></a>
+    <a href="listas.personalisada.html" > <h1>listas personalisadaz</h1></a>
     <a href="lineasyimagen.html" > <h1>linea y imagen</h1></a>   
     <a href="wiki1.html" > <h1>wiki</h1></a>    
 
