--- a/formularios.html
+++ b/formularios.html
@@ -24,12 +24,12 @@
     </tr>
     <tr>
         <td>checkbox</td>
-        <td></td>
+        <td>caja para seleccionar una opcion</td>
         <td><input type="checkbox"><input type="checkbox" checked></td>
     </tr>
     <tr>
         <td>BOTON RADIO</td>
-        <td></td>
+        <td>boton para seleccionar una opcion de varias</td>
         <td>
             <input type="radio" name="btn3" id="btn1">cecytem <br>
             <input type="radio" name="btn3" id="btn2" checked>cbt<br>
@@ -38,13 +38,13 @@
     </tr>
     <tr>
         <td>Campo oculto</td>
-        <td></td>
+        <td>lineas de texto no visibles</td>
         <td><input type="hidden" name="oculto" id="oculto" value="mi contraseña"></td>
     </tr>
 
     <tr>
         <td>Lista desplegable</td>
-        <td>aaaaaaaaaaaaaaa</td>
+        <td>al clickear en ella se muestran opciones en esa lista</td>
         <td>
             <select name="Lista" id="Lista">
             <option value="menorcito">menorcito</option>
@@ -55,97 +55,97 @@
     </tr>
     <tr>
         <td>boton enviar</td>
-        <td></td>
+        <td>manda los datos a otra pagina base de datos o alguna otra cosa</td>
         <td><input type="submit" value="enviar" ></td>
     </tr>
     <tr>
         <td>10. imagen</td>
-        <td></td>
+        <td>boton con una imagen</td>
         <td><input type="image" src="img.jpg"></td>
     </tr>
     <tr>
         <td>11 BOTON BORRAR</td>
-        <td></td>
+        <td>reinicia todo lo que haya en el formulario</td>
         <td><input type="reset" value="borrar" ></td>
     </tr>
     <tr>
         <td>12 boton color</td>
-        <td></td>
+        <td>boton de colores</td>
         <td><input type="color" ></td>
     </tr>
     <tr>
         <td>13 boton comando</td>
-        <td></td>
+        <td>el que hace toda la accion</td>
         <td><input type="button" value="aceptar"></td>
     </tr>
     <tr>
         <td>14 fecha</td>
-        <td></td>
+        <td>muestra un calendario</td>
         <td><input type="date" name="" id=""></td>
     </tr>
     <tr>
         <td>15. fecha hora</td>
-        <td></td>
+        <td>muestra fecha y hora seleccionada</td>
         <td><input type="datetime" name="" id=""></td>
     </tr>
     <tr>
         <td>16 fecha hora local</td>
-        <td></td>
+        <td>muestra fecha y hora local</td>
         <td><input type="datetime-local" name="" id=""></td>
     </tr>
     <tr>
         <td>17 email</td>
-        <td></td>
+        <td>formulario que debe ingresar el arroba y el .com</td>
         <td><input type="email" name="" id=""></td>
     </tr>
     <tr>
         <td>18 campo archivo</td>
-        <td></td>
+        <td>te deja subir un archivo de tu dispositivo</td>
         <td><input type="file" name="" id=""></td>
     </tr>
     <tr>
         <td>19 mes del año </td>
-        <td></td>
+        <td>muestra los 12 meses del año para seleccionar</td>
         <td><input type="month" name="" id=""></td>
     </tr>
     <tr>
         <td>20 campo numerico</td>
-        <td></td>
+        <td>solo te deja ingresar numeros</td>
         <td><input type="number" name="" id="" step="0.5" value="0"></td>
     </tr>
     <tr>
         <td>21 barra de deslizamiento</td>
-        <td></td>
+        <td>una barra de deslizamiento de un numero min a uno max</td>
         <td><input type="range" name="" id="" min="0" max="100"></td>
     </tr>
     <tr>
         <td>22 campo busqueda</td>
-        <td></td>
+        <td>hace busquedas en internet al poner algo</td>
         <td><input type="search"></td>
     </tr>
     <tr>
         <td>23 campo telefonico</td>
-        <td></td>
+        <td>ingresar numeros de telefono</td>
         <td><input type="tel"></td>
     </tr>
     <tr>
         <td>24 hora</td>
-        <td></td>
+        <td>te deja seleccionar la hora</td>
         <td><input type="time"></td>
     </tr>
     <tr>
         <td>25 url</td>
-        <td></td>
+        <td>sirve para poner url </td>
         <td><input type="url"></td>
     </tr>
     <tr>
         <td>26 semana</td>
-        <td></td>
+        <td>muestra las semanas de cada mes</td>
         <td><input type="week"></td>
     </tr>
     <tr>
         <td>27 lista oculta o autocompletado</td>
-        <td></td>
+        <td>al poner alguna letra trata de autocompletar con lo que tenga</td>
         <td><input list="paises" type="text">
         <datalist id="paises">
             <option value="mexico"></option>
@@ -156,11 +156,12 @@
     </tr>
     <tr>
         <td>28 barra de progreso</td>
-        <td></td>
+        <td>sirve para ver cuanto tarda en cargar</td>
         <td><progress id="file" max="100" value="70">70%</progress> ></td>
     </tr>
     <tr>
         <td>29 estetico
+            <td>sirve para que se vea mas estetico los datos</td>
             <fieldset>
                 <legend>datos personales</legend>
                 <input type="text" >
