--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ border-radius: 0%;
     <a href="wiki1.html" > <h1>wiki</h1></a>    
 
     <center><h1>PRACTICAS 2DA SEMANA</h1></center>
-    <a href="tablas2.html" > <h1>tablas patrones</h1></a>
+    <a href="tablas.html" > <h1>tablas patrones</h1></a>
     <a href="formularios.html" > <h1>FORMULARIOS</h1></a>
 </body>
 </html>
